--- a/src/LandingPage/LandingPage.module.css
+++ b/src/LandingPage/LandingPage.module.css
@@ -1,3 +1,9 @@
+.heading{
+    font-size: 40px;
+    margin-bottom: 50px;
+    margin-top: 50px;
+}
+
 .logo {
     width: 180px;
     height: 80px;
